--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "jwt-decode": "^2.2.0",
+    "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "qs": "^6.9.1",
     "ra-data-json-server": "^3.1.3",
